@@ -7,18 +7,25 @@ use ExtUtils::MakeMaker 6.64;
 
 WriteMakefile(
     'NAME'         => 'Template::Plugin::JSON',
-	'VERSION_FROM' => 'lib/Template/Plugin/JSON.pm',
-	'PREREQ_PM' => {
-		'Moose'         => '0',
-		'Template'      => '2.20',
-		'Test::More'    => '0',
-		'Test::use::ok' => '0',
-		'JSON'          => '2.12',
-	},
+    'VERSION_FROM' => 'lib/Template/Plugin/JSON.pm',
+    'PREREQ_PM' => {
+        'Moose'             => '0',
+        'Template'          => '2.20',
+        'JSON'              => '2.12',
+        'Carp'              => 0,
+    },
+
+    'CONFIGURE_REQUIRES' => {
+        'ExtUtils::MakeMaker' => '6.64',
+    },
+
+    'TEST_REQUIRES' => {
+        'Test::More'    => '0',
+    },
+
     'MIN_PERL_VERSION' => '5.006',
     'INSTALLDIRS' => 'site',
     'EXE_FILES'   => [],
-    'SIGN'        => 1,
     'PL_FILES'    => {}
 );
 
