@@ -2,6 +2,7 @@ Revision history for Perl module Template::Plugin::JSON
 
 0.07 2015-12-28 NEILB
     - Min version of perl as 5.006 in source & metadata
+    - Added CONFIGURE_REQUIRES and TEST_REQUIRES
     - Updated format of this file to follow CPAN::Changes::Spec
 
 0.06 2010-03-26 NUFFIN
